# ai-engineering-portfolio

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PORTFOLIO.md  README.md  claude-code.provider.json
docs/agent-handoff/: ACTIVE_TASKS.md  README.md
docs/daily-progress/: 2026-05-14.md  (+2 more)
projects/second-brain-os/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
projects/second-brain-os/config/: portfolio_projects.yaml  sources.yaml
projects/second-brain-os/prompts/: summarize_article.yaml  summarize_repo.yaml  summarize_video.yaml
projects/second-brain-os/src/second_brain/: __init__.py
projects/second-brain-os/src/second_brain/agents/: __init__.py  github_agent.py  rss_agent.py  web_agent.py  youtube_agent.py
projects/second-brain-os/src/second_brain/app/: mac_app.py
projects/second-brain-os/src/second_brain/app/static/: index.html
projects/second-brain-os/src/second_brain/cli/: __init__.py  main.py
projects/second-brain-os/src/second_brain/core/: __init__.py  db.py  llm_client.py  logger.py  models.py  settings.py
projects/second-brain-os/src/second_brain/embeddings/: __init__.py  provider.py
projects/second-brain-os/src/second_brain/orchestration/: __init__.py  pipeline.py
projects/second-brain-os/src/second_brain/processing/: __init__.py  context_budget.py  project_mapper.py  simple_processor.py  summarizer.py
projects/second-brain-os/src/second_brain/research/: __init__.py  ask.py
projects/second-brain-os/src/second_brain/vault/: __init__.py  daily_note.py  index.py  index_updater.py  note_writer.py  scaffold.py
projects/second-brain-os/tests/unit/: test_agents.py  test_ask.py  test_cli.py  test_context_budget.py  test_daily_note.py  test_db.py  test_embedding_provider.py  test_github_agent.py  test_llm_client.py  test_models.py  test_note_writer.py  test_pipeline.py  test_project_mapper.py  test_settings.py  test_summarizer.py  test_vault_index.py  test_vault_scaffold.py
projects/skills-hud/: README.md  pyproject.toml
projects/skills-hud/skills_hud/: __init__.py  __main__.py  scanner.py  server.py  usage.py
projects/skills-hud/web/: app.js  index.html
prompts/: REGISTRY.md
scripts/: agent_handoff.py  sync_claude_code_provider.py
(+21 files in other folders)
