[project]
name = "second-brain-os"
version = "0.1.0"
description = "Daily knowledge harness for AI engineers — ingests sources, writes to Obsidian, queryable on demand"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "typer>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "youtube-transcript-api>=0.6.0",
    "tiktoken>=0.7.0",
    "aiofiles>=23.0.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "socksio>=1.0.0",
    "customtkinter>=5.2.2",
    "pywebview>=6.2.1",
    "chromadb>=1.3.0",
    "sentence-transformers>=5.4.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sbo = "second_brain.cli.main:app"
sbo-app = "second_brain.app.mac_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]
