[project]
name = "skills-hud"
version = "0.2.0"
description = "Local macOS HUD that shows installed Claude Code skills and how often you actually invoke them."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[project.scripts]
skills-hud = "skills_hud.__main__:main"
skills-hud-serve = "skills_hud.__main__:serve_only"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills_hud"]

[tool.ruff]
line-length = 100
target-version = "py311"
